# APISecurity

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api_scout/: __init__.py  anomaly.py  auth.py  cicd.py  cli.py  dashboard.py  database.py  egress.py  graph.py  inventory.py  models.py  observability.py  remediation.py  scanner.py  scheduler.py
api_scout/parsers/: __init__.py  alb.py  api_gateway.py  base.py  generic.py  nginx.py
samples/: proposed_spec.json
tests/: conftest.py  test_auth.py  test_dashboard.py  test_database.py
