[project]
name = "api-scout"
version = "0.1.0"
description = "API Discovery & Inventory Tool — passive log analysis + active scanning"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.scripts]
api-scout = "api_scout.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
