[project]
name = "api-scout"
version = "0.2.0"
description = "API Discovery & Inventory Tool — passive log analysis + active scanning"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    # Auth + sessions
    "bcrypt>=4.0",
    "itsdangerous>=2.1",
    # Observability
    "prometheus-client>=0.19",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
api-scout = "api_scout.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api_scout*"]
exclude = ["tests*", "samples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
